--- a/js/jsLearning_05.html
+++ b/js/jsLearning_05.html
@@ -10,7 +10,11 @@ solution:
 2.增加一次判断即可
 3.利用js改变样式，由于该例中要求元素不能换行，且可以设置宽高，所有我给元素display属性设置为inline-block
 为了让各个span之间底部对齐，我采用flex布局方式，但发现不起作用，没想明白是为什么。
-4.排序方面使用了冒泡排序和插入排序两种排序方法，分别实现了顺序排序和逆序排列 -->
+4.排序方面使用了冒泡排序和插入排序两种排序方法，分别实现了顺序排序和逆序排列 
+
+未完成的地方:
+1.对齐方式不对
+2.可视化过程没有表现出来-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -20,7 +24,7 @@ solution:
 	body{
 	text-align:center;
 	}
-	.flex-container{
+	#list{
 		display:  flex;
 		flex-flow: row nowrap;
 		justify-content: flex-start;
@@ -46,12 +50,11 @@ solution:
 <button id='btnRightIn'>右侧入</button>
 <button id='btnLeftOut'>左侧出</button>
 <button id='btnRightOut'>右侧出</button>
-<button id='sort'>顺序排列</button>
-<button id='resort'>逆序排列</button>
+<button id='sort'>顺序排列(冒泡排序)</button>
+<button id='resort'>逆序排列(插入排序)</button>
 </span>
-<div class="flex-container">
+
 <div id='list' ></div>	
-</div>
 
 
 
@@ -103,7 +106,6 @@ solution:
     		list.push(getValue);
 			display(list);
     	}
-		
 	}
 	function removeLeft(){
 		if(list.length!=0){
@@ -122,7 +124,6 @@ solution:
 		else{
 			alert('nothing to delete');
 		}
-		
 	}
 	function bubbleSort(){
 		//顺序
@@ -131,9 +132,10 @@ solution:
 			for(var j=0;j<len-i-1;j++){
 				if(list[j]>list[j+1]){
 					swap(list,j,j+1);
+					
 				}
+				display(list);
 			}
-		display(list);
 	}
 	function insertSort(){
 		//倒序
@@ -144,12 +146,13 @@ solution:
 				var j=i;
 			    while(j>0&&list[j-1]<temp){
 			    	list[j]=list[j-1];
+			    	display(list);
 			    	j-=1;
 			    }
 			    list[j]=temp;
 			}
 		}
-		display(list);
+		
 	}
 	function swap(arr,index1,index2){
 		var temp=arr[index1];
