correct an error

--- a/js/jsLearning_05.html
+++ b/js/jsLearning_05.html
@@ -9,7 +9,7 @@ solution:
 1.利用html5的placeholder属性提示用户输入数值的范围，并在获取数值时添加一次判断
 2.增加一次判断即可
 3.利用js改变样式，由于该例中要求元素不能换行，且可以设置宽高，所有我给元素display属性设置为inline-block
-为了让各个span之间底部对齐，我采用flex布局方式，但发现不起作用，没想明白是为什么。
+为了让各个span之间底部对齐，我采用flex布局方式，但发现不起作用，没想明白是为什么。(后来明白了，是设置flex的父元素设置错位置了)
 4.排序方面使用了冒泡排序和插入排序两种排序方法，分别实现了顺序排序和逆序排列 
 
 未完成的地方:
